Clean up of the core classes. Start of the mega refactor!